--- a/registration.html
+++ b/registration.html
@@ -2,77 +2,109 @@
 <html lang="ru">
 
 <head>
-    <title>Registration</title>
+    <title data-lang="registration_text">Registration</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width">
     <link rel="stylesheet" href="registration/style.css">
+    <link rel="stylesheet" href="./css/fonts.css">
+    <link rel="icon" href="./data/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
 </head>
 
 <body>
+    <div id="splash-screen">
+        <svg class="svg_logo_1" xmlns="http://www.w3.org/2000/svg" width="161" height="48" viewBox="0 0 161 48"
+            fill="none">
+            <g clip-path="url(#clip0_2_7)">
+                <path
+                    d="M28.4634 9.65134C28.4634 8.3839 28.2138 7.12887 27.7288 5.95791C27.2437 4.78695 26.5328 3.72298 25.6366 2.82677C24.7404 1.93055 23.6764 1.21964 22.5055 0.734608C21.3345 0.24958 20.0795 -6.10906e-05 18.812 -6.10352e-05C17.5446 -6.09798e-05 16.2896 0.24958 15.1186 0.734608C13.9477 1.21964 12.8837 1.93055 11.9875 2.82677C11.0913 3.72298 10.3803 4.78695 9.89532 5.95791C9.4103 7.12887 9.16064 8.3839 9.16064 9.65134H13.0141C13.0141 8.88995 13.1641 8.13601 13.4555 7.43258C13.7469 6.72914 14.1739 6.08999 14.7123 5.5516C15.2507 5.01322 15.8898 4.58615 16.5933 4.29478C17.2967 4.0034 18.0507 3.85344 18.812 3.85344C19.5734 3.85344 20.3274 4.0034 21.0308 4.29477C21.7342 4.58615 22.3734 5.01322 22.9118 5.5516C23.4502 6.08999 23.8772 6.72914 24.1686 7.43258C24.46 8.13601 24.6099 8.88995 24.6099 9.65134H28.4634Z"
+                    fill="#121212" />
+                <path
+                    d="M31.7351 9.16064H6.21615C2.78306 9.16064 0 11.9437 0 15.3768V40.8958C0 44.3289 2.78306 47.1119 6.21615 47.1119H31.7351C35.1682 47.1119 37.9513 44.3289 37.9513 40.8958V15.3768C37.9513 11.9437 35.1682 9.16064 31.7351 9.16064Z"
+                    fill="#FF5634" />
+                <path
+                    d="M31.5715 27.9727C31.5715 29.6268 31.2457 31.2648 30.6127 32.793C29.9797 34.3212 29.0519 35.7097 27.8823 36.8794C26.7126 38.049 25.3241 38.9768 23.7959 39.6098C22.2677 40.2428 20.6297 40.5686 18.9756 40.5686C17.3215 40.5686 15.6836 40.2428 14.1554 39.6098C12.6272 38.9768 11.2386 38.049 10.069 36.8794C8.89934 35.7097 7.97154 34.3212 7.33854 32.793C6.70553 31.2648 6.37973 29.6268 6.37973 27.9727H11.4089C11.4089 28.9664 11.6046 29.9504 11.9849 30.8684C12.3651 31.7864 12.9225 32.6206 13.6251 33.3232C14.3278 34.0259 15.1619 34.5832 16.08 34.9635C16.998 35.3438 17.9819 35.5395 18.9756 35.5395C19.9693 35.5395 20.9533 35.3438 21.8713 34.9635C22.7893 34.5832 23.6235 34.0259 24.3261 33.3232C25.0288 32.6206 25.5861 31.7864 25.9664 30.8684C26.3467 29.9504 26.5424 28.9664 26.5424 27.9727H31.5715Z"
+                    fill="white" />
+                <path
+                    d="M47.8853 34.1104H54.2081C60.1453 34.1104 64.3605 30.4349 64.3605 25.2687C64.3605 20.1025 60.1453 16.4528 54.2081 16.4528H47.8853V34.1104ZM51.6635 30.6662V19.8969H54.6964C58.0634 19.8969 60.4538 22.133 60.4538 25.2687C60.4538 28.4301 58.0634 30.6662 54.6964 30.6662H51.6635ZM73.4526 31.1032C71.8847 31.1032 70.7281 30.1265 70.2912 28.6871H79.8782C79.8782 23.6752 77.4364 20.5138 73.2726 20.5138C69.3916 20.5138 66.4358 23.4181 66.4358 27.4277C66.4358 31.5144 69.5201 34.4188 73.4783 34.4188C75.4316 34.4188 77.7192 33.5963 78.9015 32.3626L76.5111 29.9209C75.7915 30.6148 74.5064 31.1032 73.4526 31.1032ZM73.4269 23.8294C74.9433 23.8294 75.92 24.6776 76.2798 25.9884H70.3426C70.8309 24.6519 72.0132 23.8294 73.4269 23.8294ZM82.4169 34.1104H86.1694V16.1443H82.4169V34.1104ZM91.3212 18.9973C92.4264 18.9973 93.326 18.072 93.326 16.9411C93.326 15.8873 92.4264 14.9363 91.3212 14.9363C90.1646 14.9363 89.265 15.8873 89.265 16.9411C89.265 18.072 90.1646 18.9973 91.3212 18.9973ZM89.4192 34.1104H93.1718V20.8222H89.4192V34.1104ZM100.894 34.1104H104.364L110.044 20.8222H106.138L102.642 29.7923L99.0695 20.8222H95.137L100.894 34.1104ZM117.478 31.1032C115.91 31.1032 114.754 30.1265 114.317 28.6871H123.904C123.904 23.6752 121.462 20.5138 117.298 20.5138C113.417 20.5138 110.461 23.4181 110.461 27.4277C110.461 31.5144 113.546 34.4188 117.504 34.4188C119.457 34.4188 121.745 33.5963 122.927 32.3626L120.537 29.9209C119.817 30.6148 118.532 31.1032 117.478 31.1032ZM117.452 23.8294C118.969 23.8294 119.945 24.6776 120.305 25.9884H114.368C114.856 24.6519 116.039 23.8294 117.452 23.8294ZM130.195 23.2896V20.8222H126.442V34.1104H130.195V27.7618C130.195 25.2687 131.968 23.6752 134.744 23.6752V20.5138C132.714 20.5138 131.069 21.5676 130.195 23.2896ZM160.28 16.4528H155.859L151.618 22.2358L147.378 16.4528H142.905L149.357 25.3201L142.905 34.1104H147.3L151.567 28.3273L155.782 34.1104H160.28L153.803 25.243L160.28 16.4528Z"
+                    fill="#121212" />
+            </g>
+            <defs>
+                <clipPath id="clip0_2_7">
+                    <rect width="161" height="48" fill="white" />
+                </clipPath>
+            </defs>
+        </svg>
+    </div>
+    <!-- <dialog id = "dialog_1">
+        <p class = "text_in_modal_for_un_user" data-lang="text_in_dealog_1">You have registered as</p>
+        <button class = "btn_in_dialog_1">Закрыть</button>
+    </dialog> -->
     <form id="registration_form" action="">
-        <h1>Registration</h1>
+        <h1 data-lang="registration_text">Registration</h1>
         <div class="group">
             <div class="label_text">
-                <label for="phone">Telephone</label>
+                <label for="phone" data-lang="phone_text">Telephone</label>
             </div>
             <div class="input_div"><input type="text" name="phone" id="phone"></div>
         </div>
         <div class="group">
             <div class="label_text">
-                <label for="">Email</label>
+                <label data-lang="email_text">Email</label>
             </div>
             <div class="input_div"><input type="email" id="email"></div>
         </div>
         <div class="group">
             <div class="label_text">
-                <label for="">Date of birth</label>
+                <label data-lang="birth_text">Date of birth</label>
             </div>
             <div class="input_div"><input type="text" class="date"></div>
         </div>
         <div class="group">
             <div class="label_text">
-                <label for="">Name</label>
+                <label data-lang="name_text">Name</label>
             </div>
             <div class="input_div"><input type="text" id="name"></div>
         </div>
         <div class="group">
             <div class="label_text">
-                <label for="">Last name</label>
+                <label data-lang="last_name_text">Last name</label>
             </div>
             <div class="input_div"><input type="text" id="last_name"></div>
         </div>
         <div class="group">
             <div class="label_text">
-                <label for="">Middle name</label>
+                <label data-lang="middle_name_text">Middle name</label>
             </div>
             <div class="input_div"><input type="text" id="middle_name"></div>
         </div>
         <div class="group">
             <div class="label_text">
-                <label for="">Nickname</label>
+                <label data-lang="nickname_text">Nickname</label>
             </div>
             <div class="input_div">
                 <input type="text" id="nick">
-                <button type="button" class="random_btn" data-target="random_generate_nick">Generate nickname</button>
+                <button type="button" class="random_btn" data-target="random_generate_nick"
+                    data-lang="random_generate_nick_text">Generate nickname</button>
             </div>
         </div>
         <div class="group">
             <div class="label_text">
-                <label for="">Password</label>
+                <label data-lang="password_text">Password</label>
             </div>
             <div class="input_div">
                 <input type="password" id="first_password">
                 <button type="button" class="btn_password" data-target="#first_password">
-                    <img src="/registration/data/close_eye.svg">
+                    <img src="/registration/data/open_eye.svg">
                 </button>
-                <button type="button" class="random_btn" data-target="random_generate_password">Generate
+                <button type="button" class="random_btn" data-target="random_generate_password"
+                    data-lang="random_generate_password_text">Generate
                     password</button>
             </div>
         </div>
         <div class="group">
             <div class="label_text">
-                <label for="">Repeat the password</label>
+                <label data-lang="repeat_password_text">Repeat the password</label>
             </div>
             <div class="input_div">
                 <input type="password" id="second_password" onpaste="return false;">
@@ -82,29 +114,29 @@
             </div>
         </div>
         <div class="group">
-            <button class="registration" disabled>Registration</button>
-            <a class="license">User agreement</a>
-            <button type="button" class="log_in_button" onclick="switchPageOnAuthorization()">Log In</button>
-            <button type="button" class="back_on_previous_page" onclick="goBack()">Go back</button>
+            <button class="registration" disabled data-lang="registration_text">Registration</button>
+            <a class="license" data-lang="user-agreement_text">User agreement</a>
+            <button type="button" class="log_in_button" data-lang="log_in_text">Log In</button>
+            <button type="button" class="back_on_previous_page" data-lang="go_back_text">Go back</button>
         </div>
         <div class="modals">
             <div class="modal_overlay">
                 <div class="modal modal_1">
                     <span class="close-button">x</span>
-                    <h2 class="user_agreement_h2">User agreement</h2>
+                    <h2 class="user_agreement_h2" data-lang="user-agreement_text">User agreement</h2>
                     <div class="user_agreement_div">
                         <textarea id="user-agreement" rows="6" readonly>
                           </textarea>
                     </div>
                     <div class="div_checkbox">
                         <label class="checkbox-container">
-                            I agree to the terms of the user agreement
+                            <p data-lang="agree_with_user_agreement">I agree to the terms of the user agreement</p>
                             <input type="checkbox" id="agree_user_agreement">
                             <span class="checkmark"></span>
                         </label>
                     </div>
                     <div class="div_btn_agreement">
-                        <button class="btn_agreement" type="button" disabled onclick="activeBtnReg()">Confirm</button>
+                        <button class="btn_agreement" type="button" disabled data-lang="confirm_text">Confirm</button>
                     </div>
                 </div>
             </div>
@@ -114,12 +146,14 @@
     <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
     <script src="registration/js/phone.js"></script>
     <script src="registration/js/date.js"></script>
-    <script src="registration/js/validation.js"></script>
+    <script src="registration/js/validation.js" type="module" defer></script>
     <script src="registration/js/password.js"></script>
-    <script src="registration/js/random_generate.js"></script>
+    <script src="registration/js/random_generate.js" type="module" defer></script>
     <script src="registration/js/roles.js"></script>
     <script src="registration/js/modals.js"></script>
     <script src="registration/js/user_agreement.js"></script>
+    <script src="./js/another_page_theme.js"></script>
+    <script src="./js/translate.js" type="module" defer></script>
 </body>
 
 </html>
