--- a/authorization.html
+++ b/authorization.html
@@ -57,6 +57,7 @@
     <script src="./authorization/js/validation.js" type="module" defer></script>
     <script src="./js/another_page_theme.js"></script>
     <script src="./js/translate.js" type="module" defer></script>
+    <script src="https://unpkg.com/imask"></script>
 </body>
 
 </html>
