--- a/index.html
+++ b/index.html
@@ -766,16 +766,8 @@
             </p>
         </div>
     </footer>
-    <script src="./js/burger_menu.js"></script>
-    <script src="./js/slider.js"></script>
-    <script src="./js/pages.js"></script>
-    <script src="./js/theme.js"></script>
-    <script src="./js/translate.js" type="module" defer></script>
-    <script src="./js/roles.js"></script>
-    <script src="./js/modals.js"></script>
+    <script src = "./js/app.js" type="module" defer></script>
     <script src="https://unpkg.com/imask"></script>
-    <script src="./js/validation.js" type="module" defer></script>
-    <script src="./js/yandex_map.js"></script>
+    <script src = "./js/pages.js"></script>
 </body> 
-
 </html>
