--- a/orders.html
+++ b/orders.html
@@ -62,7 +62,7 @@
                 </div>
             </div>
             <div class="header_icons">
-                <a href="/basket.html">
+                <a href="./basket.html">
                     <div class="basket_inner">
                         <svg width="38" height="38" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg">
                             <path fill-rule="evenodd" clip-rule="evenodd"
@@ -72,7 +72,7 @@
                         <span class="basket_count">0</span>
                     </div>
                 </a>
-                <a href="index.html">
+                <a href="./index.html">
                     <svg class = "home_icon" width="45" height="45" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg">
                         <path fill-rule="evenodd" clip-rule="evenodd"
                             d="M7.98 1.984l7 6h-2.003v6H9.96V10.97H5.997v3.016H2.982v-6H.979l7-6z" fill="#000"></path>
@@ -84,7 +84,6 @@
     <main>
         <div class="wrapper">
             <div class="cards">
-
             </div>
             <div class="numeration">
                 <button type="button" class="btn_num btn_first_items">&laquo;</button>
