--- a/admin.html
+++ b/admin.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
   <meta charset="utf-8">
@@ -111,18 +111,20 @@
     </div>
     <div class="horisontal_line">
     </div>
+    <div class="horisontal_line">
+    </div>
     <div class="end_info">
       <p>
-        <span class="black_name_in_footer">Copyright © Deliver X | Designed by </span>
-        <span class="red_name_in_footer">BRIX Templates</span>
-        <span class="black_name_in_footer">-Powered by</span>
-        <span class="red_name_in_footer">Webflow</span>
+        <span class="black_name_in_footer" data-lang="coopering_text">Copyright © Deliver X | Designed by
+        </span>
+        <span class="red_name_in_footer">uuNick</span>
+        <a class="black_name_in_footer link_on_github" href="https://github.com/uuNick" target="_blank">github</a>
       </p>
     </div>
   </footer>
   <script src="./admin_panel/panel.js"></script>
   <script src="./js/another_page_theme.js"></script>
-  <script src="./js/translate.js" type="module" defer></script>
+  <script src="./js/translate.js" type="module"></script>
 </body>
 
 </html>
