--- a/authorization.html
+++ b/authorization.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
 
 <head>
     <title data-lang="authorization_text">Authorization</title>
@@ -54,9 +54,9 @@
             </div>
         </div>
     </form>
-    <script src="./authorization/js/validation.js" type="module" defer></script>
+    <script src="./authorization/js/validation.js" type="module"></script>
     <script src="./js/another_page_theme.js"></script>
-    <script src="./js/translate.js" type="module" defer></script>
+    <script src="./js/translate.js" type="module"></script>
     <script src="https://unpkg.com/imask"></script>
 </body>
 
