--- a/basket.html
+++ b/basket.html
@@ -44,7 +44,7 @@
         <button class = "btn_in_dialog_2" data-lang="cls_btn">Close</button>
     </dialog>
     <div class="wrapper">
-        <h1 data-lang="basket_text">Корзина</h1>
+        <h1 data-lang="basket_text">Basket</h1>
         <div class="header_icons">
             <a href="/basket.html">
                 <div class="basket_inner">
@@ -75,10 +75,10 @@
         </div>
     </div>
     <div class="cart"></div>
-    <button class="btn-send" data-lang="confirm_btn">Оформить заказ</button>
-    <script src="./orders/js/basket.js" type="module" defer></script>
+    <button class="btn-send" data-lang="confirm_btn">Place an order</button>
+    <script src="./orders/js/basket.js" type="module"></script>
     <script src="./js/another_page_theme.js"></script>
-    <script src="./js/translate.js" type="module" defer></script>
+    <script src="./js/translate.js" type="module"></script>
 </body>
 
 </html>
