--- a/orders.html
+++ b/orders.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
     <meta charset="utf-8">
@@ -39,10 +39,10 @@
             <div class="drop_down">
                 <button class="drop_button" data-lang="catalog_text">Каталог</button>
                 <div class="drop_down_content">
-                    <p class="drop_down_text ddt_1" data-lang="all_products_text">Все</p>
-                    <p class="drop_down_text ddt_2" data-lang="burgers_text">Бургеры</p>
-                    <p class="drop_down_text ddt_3" data-lang="drinks_text">Напитки</p>
-                    <p class="drop_down_text ddt_4" data-lang="pizzas_text">Пиццы</p>
+                    <p class="drop_down_text ddt_1" data-lang="all_products_text">All</p>
+                    <p class="drop_down_text ddt_2" data-lang="burgers_text">Burgers</p>
+                    <p class="drop_down_text ddt_3" data-lang="drinks_text">Drinks</p>
+                    <p class="drop_down_text ddt_4" data-lang="pizzas_text">Pizzas</p>
                 </div>
             </div>
             <div class="input-wrapper">
@@ -94,9 +94,9 @@
             </div>
         </div>
     </main>
-    <script src="orders/js/index.js" type="module" defer></script>
+    <script src="orders/js/index.js" type="module"></script>
     <script src="./js/another_page_theme.js"></script>
-    <script src="./js/translate.js" type="module" defer></script>
+    <script src="./js/translate.js" type="module"></script>
 </body>
 
 </html>
