--- a/registration.html
+++ b/registration.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
 
 <head>
     <title data-lang="registration_text">Registration</title>
@@ -36,7 +36,7 @@
             </defs>
         </svg>
     </div>
-    <form id="registration_form" action="">
+    <form id="registration_form">
         <h1 data-lang="registration_text">Registration</h1>
         <div class="group">
             <div class="label_text">
@@ -91,7 +91,7 @@
             <div class="input_div">
                 <input type="password" id="first_password">
                 <button type="button" class="btn_password" data-target="#first_password">
-                    <img src="./registration/data/open_eye.svg">
+                    <img src="./registration/data/open_eye.svg" alt="eye_1">
                 </button>
                 <button type="button" class="random_btn" data-target="random_generate_password"
                     data-lang="random_generate_password_text">Generate
@@ -105,7 +105,7 @@
             <div class="input_div">
                 <input type="password" id="second_password" onpaste="return false;">
                 <button type="button" class="btn_password" data-target="#second_password">
-                    <img src="./registration/data/open_eye.svg">
+                    <img src="./registration/data/open_eye.svg" alt="eye_2">
                 </button>
             </div>
         </div>
@@ -140,9 +140,9 @@
     </form>
     <script src="https://unpkg.com/imask"></script>
     <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
-    <script src="./registration/js/app.js" type="module" defer></script>
+    <script src="./registration/js/app.js" type="module"></script>
     <script src="./js/another_page_theme.js"></script>
-    <script src="./js/translate.js" type="module" defer></script>
+    <script src="./js/translate.js" type="module"></script>
 </body >
 
 </html >
