--- a/orders.html
+++ b/orders.html
@@ -37,7 +37,7 @@
     <header>
         <div class="header_wrapper">
             <div class="drop_down">
-                <button class="drop_button" data-lang="catalog_text">Каталог</button>
+                <button class="drop_button" data-lang="catalog_text">Catalog</button>
                 <div class="drop_down_content">
                     <p class="drop_down_text ddt_1" data-lang="all_products_text">All</p>
                     <p class="drop_down_text ddt_2" data-lang="burgers_text">Burgers</p>
@@ -47,7 +47,7 @@
             </div>
             <div class="input-wrapper">
                 <div class="input-group">
-                    <input type="text" placeholder="Введите текст" class="input-field">
+                    <input type="text" placeholder="Input the text" class="input-field">
                     <button class="submit-button"><svg width="15px" height="15px" viewBox="0 0 24 24" fill="none"
                             xmlns="http://www.w3.org/2000/svg">
                             <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
