--- a/admin.html
+++ b/admin.html
@@ -28,7 +28,7 @@
           fill="#121212" />
       </g>
       <defs>
-        <clipPath id="clip0_2_7">
+        <clipPath>
           <rect width="161" height="48" fill="white" />
         </clipPath>
       </defs>
@@ -95,7 +95,7 @@
                 fill="#121212" />
             </g>
             <defs>
-              <clipPath id="clip0_2_7">
+              <clipPath>
                 <rect width="161" height="48" fill="white" />
               </clipPath>
             </defs>
