--- a/authorization.html
+++ b/authorization.html
@@ -35,7 +35,7 @@
             </defs>
         </svg>
     </div>
-    <form id="registration_form" action="">
+    <form id="registration_form">
         <h1 data-lang="authorization_text">Authorization</h1>
         <div id="log_field">
             <div class="group">
