--- a/basket.html
+++ b/basket.html
@@ -35,13 +35,13 @@
             </defs>
         </svg>
     </div>
-    <dialog id = "dialog_1">
-        <p class = "text_in_dialog" data-lang="text_in_dialog_1">Basket is empty</p>
-        <button class = "btn_in_dialog_1" data-lang="cls_btn">Close</button>
+    <dialog id="dialog_1">
+        <p class="text_in_dialog" data-lang="text_in_dialog_1">Basket is empty</p>
+        <button class="btn_in_dialog_1" data-lang="cls_btn">Close</button>
     </dialog>
-    <dialog id = "dialog_2">
-        <p class = "text_in_dialog" data-lang="text_in_dialog_2">Your order has been successfully placed</p>
-        <button class = "btn_in_dialog_2" data-lang="cls_btn">Close</button>
+    <dialog id="dialog_2">
+        <p class="text_in_dialog" data-lang="text_in_dialog_2">Your order has been successfully placed</p>
+        <button class="btn_in_dialog_2" data-lang="cls_btn">Close</button>
     </dialog>
     <div class="wrapper">
         <h1 data-lang="basket_text">Basket</h1>
@@ -65,8 +65,8 @@
                         <g id="Dribbble-Light-Preview" transform="translate(-104.000000, -3805.000000)" fill="#000000">
                             <g id="icons" transform="translate(56.000000, 160.000000)">
                                 <path
-                                    d="M59.9990013,3645.86816 L59.9990013,3652.13116 C59.9990013,3652.84516 58.8540013,3653.25316 58.2180013,3652.82516 L53.9990013,3650.14016 L53.9990013,3652.13116 C53.9990013,3652.84516 53.4260013,3653.25316 52.7900013,3652.82516 L48.4790013,3649.69316 C47.9650013,3649.34616 47.7980013,3648.65316 48.3120013,3648.30616 L52.7900013,3645.17516 C53.4260013,3644.74616 53.9990013,3645.15416 53.9990013,3645.86816 L53.9990013,3647.85916 L58.2180013,3645.17516 C58.8540013,3644.74616 59.9990013,3645.15416 59.9990013,3645.86816"
-                                    id="previous-[#999]"> </path>
+                                    d="M59.9990013,3645.86816 L59.9990013,3652.13116 C59.9990013,3652.84516 58.8540013,3653.25316 58.2180013,3652.82516 L53.9990013,3650.14016 L53.9990013,3652.13116 C53.9990013,3652.84516 53.4260013,3653.25316 52.7900013,3652.82516 L48.4790013,3649.69316 C47.9650013,3649.34616 47.7980013,3648.65316 48.3120013,3648.30616 L52.7900013,3645.17516 C53.4260013,3644.74616 53.9990013,3645.15416 53.9990013,3645.86816 L53.9990013,3647.85916 L58.2180013,3645.17516 C58.8540013,3644.74616 59.9990013,3645.15416 59.9990013,3645.86816">
+                                </path>
                             </g>
                         </g>
                     </g>
