--- a/orders.html
+++ b/orders.html
@@ -63,9 +63,9 @@
                     </button>
                     <button class="clear-button">
                         <svg width="15px" height="15px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
-                            <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
-                            <g id="SVGRepo_iconCarrier">
+                            <g id="SVGRepo_bgCarrier_2" stroke-width="0"></g>
+                            <g id="SVGRepo_tracerCarrier_2" stroke-linecap="round" stroke-linejoin="round"></g>
+                            <g id="SVGRepo_iconCarrier_2">
                                 <path d="M6 6L18 18M6 18L18 6" stroke="#000000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
                             </g>
                         </svg>
